# zk-dcap-verifier

./: Cargo.toml
guest/: Cargo.toml
guest/src/: lib.rs
primitive-io/: Cargo.toml
src/: main.rs
