[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []
std = ["pink-json/std"]

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", default-features = false }

serde = { version = "1.0.197", default-features = false, features = ["alloc", "derive"] }
# serde_json = { version = "1.0.107", default-features = false, features = ["alloc"] }
pink-json = { version = "0.4", default-features = false } # serde_json isn't determinism
scale-codec = { version = "3.6.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "serde"] }

primitive-io = { path = "../primitive-io" }
